// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label> should render <Label> 1`] = `
<label
  className="sc-label"
  required={false}
>
  Text
</label>
`;

exports[`<Label> should render required <Label> 1`] = `
<label
  className="sc-label sc-required"
  required={true}
>
  Text
</label>
`;
